[tool.poetry]
name = "hello_python"
version = "0.1.0"
description = ""
authors = ["William Grigor <bjgrigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
guzzle_sphinx_theme = "^0.7.11"
pip = "^22.2.2"
install = "^1.3.5"
sphinx-material = "^0.0.35"
sphinx-automodapi = "^0.14.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
